# VigineFormat

./: .gitmodules  CMakeLists.txt  README.md
include/vigine/format/: diagramimporters.h  diagrammodel.h  documentimporters.h  identify.h  pointcloud.h
src/: dataimporters.cpp  diagramimporters.cpp  diagrammodel.cpp  identify.cpp  pdfimporter.cpp  pointimporters.cpp
test/: data_test.cpp  diagram_test.cpp  identify_test.cpp  pdf_test.cpp  point_test.cpp
